<resources>
    <string name="app_name">Restaurante</string>
    <string name="TVNomeRestaurante">Restaurante Francisco</string>
    <string name="TVUsuario">Usuário:</string>
    <string name="TVSenha">Senha:</string>
    <string name="BTEntrar">Entrar</string>
    <string name="BTCadastro">Cadastrar</string>
    <string name="BTRecuperarSenha">Recuperar Senha</string>
    <string name="ERUserVazio">Insira um usuário</string>
    <string name="ERSenhaVazio">Insira a senha</string>
    <string name="TVConcluir">Concluir</string>
    <string name="TVCancelar">Cancelar</string>
    <string name="TVConfSenha">Confirma Senha</string>
    <string name="TVConfEmail">Confirma E-mail</string>
    <string name="TVEmail">E-mail</string>
    <string name="TXCancelar">Deseja cancelar?</string>
    <string name="TXSim">Sim</string>
    <string name="TXNao">Não</string>
    <string name="ERVazio">Campo vazio</string>
    <string name="ERSenhaDif">A confirmação de senha é diferente. Favor, insira novamente.</string>
    <string name="EREmailDif">A confirmação de E-mail é diferente. Favor, insira novamente.</string>
    <string name="ERConf">Ocorreu um problema </string>
    <string name="BTCardapioDoDia">Cardápio do dia</string>
    <string name="BTCardapioSemanal">Cardápio semanal</string>
    <string name="TXCadastroSuc">Sucesso na criação/modificação da conta</string>
    <string name="TXOK">OK</string>
    <string name="BTMeusPedidos">Meus Pedidos</string>
    <string name="BTAlterarCadastro">Alterar Cadastro</string>
    <string name="BTAlterarCadastroAdmin">Alterar Cadastros</string>
    <string name="TXSair">Deseja sair do aplicativo?</string>
    <string name="TXDom">Domingo</string>
    <string name="TXSeg">Segunda-feira</string>
    <string name="TXTer">Terça-feira</string>
    <string name="TXQua">Quarta-feira</string>
    <string name="TXQui">Quinta-feira</string>
    <string name="TXSex">Sexta-feira</string>
    <string name="TXSab">Sábado</string>
    <string name="title_activity_menu_semana">MenuSemana</string>
    <string name="TXDia">Pratos do dia</string>
    <string name="TXLipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt arcu neque, ac faucibus lacus ultrices eget. Nam in lobortis magna, at imperdiet neque. Morbi mollis gravida hendrerit. Etiam tempor nulla blandit ipsum venenatis, vel feugiat massa tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam ut orci dolor. Phasellus et sodales metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec vitae orci sapien. Aliquam aliquam, massa eget volutpat suscipit, tellus enim eleifend tellus, ac luctus odio mauris quis ex. Suspendisse lorem purus, venenatis ut elit non, commodo porta elit. Sed sed pharetra nibh. Sed vel libero ornare, consectetur velit non, vehicula turpis. Suspendisse tempus ex tortor, vitae iaculis metus sodales quis. Nulla facilisi. Proin vitae enim massa. </string>
    <string name="TXClient">Clientes</string>
    <string name="TXAdmin">Administradores</string>
    <string name="TXAviso1">View exclusiva para Admins, padrão agora para testes</string>
    <string name="BTconfirmar">Confirmar</string>
    <string name="BTRelatorioAdmin">Relatórios</string>
    <string name="BTMeusPedidosAdmin">Pedidos em andamento</string>
    <string name="BTAdicionarPrato">Adicionar Pratos</string>
    <string name="TXModContaOutras">Modificar outras contas</string>
    <string name="TXModConta">Modificar conta</string>
    <string name="TXEmailForgot">Insira o seu E-mail</string>
    <string name="TXLoading">Carregando</string>
    <string name="TXDescricao">Descrição: %1$s</string>
    <string name="TXIngredientes">Ingredientes: %1$s</string>
    <string name="TXPreco">Preço: R$ %1$.2f</string>
    <string name="TXPreco2"> R$ %1$.2f</string>
    <string name="TXObservacao">Observações:</string>
    <string name="TXNomePrato">Prato: %1$s</string>
    <string name="TXQuantidade">Quantidade: %1$d</string>
    <string name="TXHint">Adicione neste espaço modificações ao prato, como retirar ingredientes.</string>
    <string name="BTAdd_Prato">Adicionar Pratos</string>
    <string name="BTEdit_Prato">Editar Pratos</string>
    <string name="BTRemover_Prato">Remover Pratos</string>
    <string name="TXValorDia">Dia da semana: %1$s</string>
    <string name="TXValorPreco">R$: %1$.2f</string>
    <string name="BTIniciar">Iniciar</string>
    <string name="BTPronto">Pronto</string>
    <string name="TXVerificarCampo">Verifique os campos</string>
    <string name="TXCabecalho">Cabeçalho</string>
    <string name="TXCheckout">Checkout</string>
    <string name="TVQuantidade">Quantidade :</string>
    <string name="TVValorTotal">Valor Total:</string>
    <string name="TXPratoSemana">Pratos da Semana</string>
    <string name="BTPedido">Pedido</string>
    <string name="TXCadastro">Cadastro</string>
    <string name="TVNome">Nome</string>
    <string name="TXSelecionarImagem">Selecionar Imagem</string>
    <string name="TXDescricao1">Descrição: </string>
    <string name="TXPreco1">Preço: </string>
    <string name="TXIngredientes1">Ingredientes: </string>
    <string name="TXNomePrato1">Prato: </string>
    <string name="TXPedidoCancelado">Pedidos Cancelados</string>
    <string name="TXPedidoAndamento">Pedidos em Andamento</string>
    <string name="TXPedidoEspera">Pedidos em Espera</string>
    <string name="TXPedidoConcluido">Pedidos Concluídos</string>
    <string name="TXRelatorioQuantidade">Quantidade de pedidos: %1$d</string>
    <string name="TXRelatorioQuantidadePratos">Quantidade de pratos: %1$d</string>
    <string name="TXRelatorioPrecoTotal">Valor combinado: R$ %1$.2f</string>
    <string name="TXRelatorioNomePrato">Nome do prato: %1$s</string>
    <string name="TXRelatorioSituacao">Situação: %1$s</string>
    <string name="TXRelatorioPratoDono">Usuário: %1$s</string>
    <string name="TXRelatorioPratoPreco">Preço: R$%1$.2f</string>
    <string name="TXRelatorioPratoObservacao">Observação: %1$s</string>
    <string name="TXRelatorioPratoData">Data: %1$s</string>
    <string name="TXRelatorioPratoquantidade">Quantidade: %1$d</string>
    <string name="TXHeaderRelatorioCompleto">Todos os registros</string>
    <string name="TXHeaderRelatorioPratos">Todos os pratos</string>
    <string name="TXHeaderRelatorioUsuario">Todos os usuários</string>
    <string name="ERSenhaFraca">A sua senha é muito fraca.</string>
    <string name="ERPratoSemana">Para selecionar um prato, utilize o cardápio do dia</string>
    <string name="TXModSenha">Modificar Senha</string>
    <string name="TXPermADMIN">Insira usuário que deseja modificar</string>
    <string name="TXPermSenhaADMIN">Insira a senha do usuário</string>
    <string name="TXPermNivel">Escolha o nível de permissão</string>
    <string-array name="SANivelADMIN">
        <item> </item>
        <item>Administrador</item>
        <item>Cliente</item>
    </string-array>



    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">LbKeHSa7KwUxQ5pq9x5zvi2zjxUNmlESxSbQbdhp</string>
    <string name="back4app_client_key">OL0AmW3b8TERiXsn0nEUnBpbqL6yZXpm5RB83D2N</string>
    <string name="title_activity_gerador_relatorio_usuario">GeradorRelatorioUsuario</string>
    <string name="title_activity_gerador_relatorio_pratos">GeradorRelatorioPratos</string>
    <string name="sender_ID">211398102774</string>

</resources>
