<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:orientation="vertical"
    android:layout_margin="16dp">

        <Button
            android:id="@+id/BT_Cardapio_Dia"
            android:text="@string/BTCardapioDoDia"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <Button
            android:id="@+id/BT_Cardapio_Semana"
            android:text="@string/BTCardapioSemanal"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <Button
            android:id="@+id/BT_Pedidos"
            android:text="@string/BTMeusPedidos"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <Button
            android:id="@+id/BT_Alt_Cadastro"
            android:text="@string/BTAlterarCadastro"
            android:layout_width="match_parent"
            android:layout_height="75dp" />

    </LinearLayout>
