<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAtCadastro"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TXCadastro"
            android:textSize="35sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVUsuario"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ET_New_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVNome"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ET_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVEmail"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ET_New_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVConfEmail"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ET_Conf_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <Button
            android:id="@+id/BT_Modificar_Senha"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/TXModSenha"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/BT_Cancela"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/TVCancelar"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/BT_Confirma"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/TVConcluir"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>