<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PratoDaSemana"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/TVPratoSemanaHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TXPratoSemana"
            android:textSize="25sp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Dom"
            android:text="@string/TXDom"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Seg"
            android:text="@string/TXSeg"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Ter"
            android:text="@string/TXTer"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="25dp"/>
        <Button
            android:id="@+id/BT_PS_Qua"
            android:text="@string/TXQua"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Qui"
            android:text="@string/TXQui"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Sex"
            android:text="@string/TXSex"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/BT_PS_Sab"
            android:text="@string/TXSab"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"
            android:textSize="25sp" />
    </LinearLayout>
</ScrollView>