<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPermissaoADMIN"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/TXPermADMIN"/>
    <EditText
        android:id="@+id/ET_Usuario_Modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/TXPermSenhaADMIN"/>
    <EditText
        android:id="@+id/ET_Usuario_Senha_Modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/TXPermNivel"/>
    <Spinner
        android:id="@+id/SpinnerAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>
    <Button
        android:id="@+id/BT_Confirma"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/BTconfirmar"/>

</LinearLayout>