<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuSenha"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TXEmailForgot"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/ET_Recupera_Email"
        android:layout_marginTop="25dp"
        android:hint="@string/TVEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    <Button
        android:id="@+id/BT_Recuperar_Confirma"
        android:layout_marginTop="75dp"
        android:text="@string/BTconfirmar"
        android:layout_width="match_parent"
        android:layout_height="75dp" />

</LinearLayout>