<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuCadastro"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cadastro"
            android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVUsuario"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETNewUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVEmail"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVConfEmail"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETConfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVSenha"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETNewSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TVConfSenha"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/ETConfSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/BTCancela"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/TVCancelar"
            android:paddingRight="1dp"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/BTConfirma"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/TVConcluir"
            android:paddingLeft="15dp"
            android:textSize="20sp"/>


    </LinearLayout>
</LinearLayout>