<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarEditorPratosADMIN"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="Nome Prato"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ET_Nome_Adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="Ingredientes"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"/>
        <EditText
            android:id="@+id/ET_Ingredientes_Adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="Preço"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ET_Preco_Adicionar"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </LinearLayout>

    <TextView
        android:text="Descrição"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText

        android:id="@+id/ET_Descricao_Adicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"/>
    <ImageView
        android:id="@+id/IV_Imagem_Preview"
        android:layout_width="match_parent"
        android:layout_height="550px" />
    <Button
        android:id="@+id/BT_Adicionar_Imagem"
        android:text="Adicionar Imagem"
        android:layout_width="match_parent"
        android:layout_height="75dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/CB_1"
                android:text="@string/TXDom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/CB_4"
                android:text="@string/TXQua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/CB_7"
                android:text="@string/TXSab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/CB_2"
                android:text="@string/TXSeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/CB_5"
                android:text="@string/TXQui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/CB_3"
                android:text="@string/TXTer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
            <CheckBox
                android:id="@+id/CB_6"
                android:text="@string/TXSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </CheckBox>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/BT_Confirma"
        android:layout_gravity="bottom"
        android:text="@string/BTconfirmar"
        android:layout_width="match_parent"
        android:layout_height="75dp" />
</LinearLayout>