<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/frameheader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/imagemicone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:background="@drawable/customheaderbackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/ET_Usuario"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:singleLine="true"
                android:background="@drawable/customedittextbackground"
                android:gravity="bottom|center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TVUsuario"
                android:textSize="35sp"
                android:paddingLeft="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ET_Senha"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:inputType="textPassword"
                android:background="@drawable/customedittextbackground"
                android:gravity="bottom|center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TVSenha"
                android:textSize="35sp"
                android:paddingLeft="10dp"/>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:id="@+id/BT_Entrar"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/BTEntrar"
            android:textSize="20sp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"/>

        <Button
            android:id="@+id/BT_Cadastro"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/BTCadastro"
            android:textSize="20sp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"/>

        <Button
            android:id="@+id/BT_Recuperar_Senha"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/BTRecuperarSenha"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custombutton"
            android:textAllCaps="false"
            android:typeface="sans"
            android:textColor="@color/colorButtonText"/>

</LinearLayout>

</LinearLayout>